--- a/compose/traefik.yml
+++ b/compose/traefik.yml
@@ -3,20 +3,26 @@ services:
   traefik:
     image: traefik
     command:
-      - "--docker"								# Enable Docker backend
-      - "--docker.swarmmode"							# Use Docker on Swarm Mode
-      - "--docker.domain=cinosure.com"						# Default domain used
-      - "--docker.watch"							# Watch provider
-      - "--api"									# Enable api/dashboard
-      - "--entrypoints=Name:http Address::80 Redirect.EntryPoint:https"		# Entrypoints
-      - "--entrypoints=Name:https Address::443 TLS"				# Entrypoints
-      - "--defaultentrypoints=http,https"					# Entrypoints to be used by frontends
-      - "--acme"								# enable ACME automatic SSL
-      - "--acme.storage=/certificates/acme.json"				# Cert storage
-      - "--acme.entryPoint=https"						# Activate HTTP-01 challenge
-      - "--acme.httpChallenge.entryPoint=http"					# HTTP challenge EntryPoint
-      - "--acme.onHostRule=true"						# Cert gen on frontend rules
-      - "--acme.email=jon@whiteheat.org.uk"					# email used for registration
+      - "--web"
+      - "--docker"
+      - "--docker.swarmmode"
+      - "--docker.domain=traefik"
+      - "--docker.watch"
+      - "--api"
+      - "--entrypoints=Name:http Address::80 Redirect.EntryPoint:https"
+      - "--entrypoints=Name:https Address::443 TLS"
+      - "--defaultentrypoints=http,https"
+      - "--acme"
+      - "--acme.storage=/certificates/acme.json"
+      - "--acme.entryPoint=https"
+      - "--acme.httpChallenge.entryPoint=http"
+      - "--acme.onHostRule=true"
+      - "--acme.onDemand=false"
+      - "--acme.email=jon@whiteheat.org.uk"
+    labels:
+      - "traefik.frontend.rule=Host:traefik.cinosure.com"
+      - "traefik.enable=true"
+      - "traefik.port=8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - traefik-public-certificates:/certificates
@@ -24,16 +30,11 @@ services:
       - traefik-web
     ports:
       - "80:80"
-      - "443:443"
       - "8080:8080"
     deploy:
       placement:
         constraints: [node.role==manager]
       replicas: 1
-      labels:
-        - "traefik.frontend.rule=Host:traefik.cinosure.com"
-        - "traefik.enable=true"
-        - "traefik.port=8080"
 networks:
   traefik-web:
     external: true
