--- a/compose/portainer.yml
+++ b/compose/portainer.yml
@@ -22,22 +22,20 @@ services:
   portainer:
     image: portainer/portainer
     command: -H tcp://tasks.agent:9001 --tlsskipverify
-    ports:
-      - "9900:9000"
     volumes:
       - portainer_data:/data
     networks:
       - agent_network
-      - traefik-public
+      - traefik-web
     deploy:
       mode: replicated
       replicas: 1
       placement:
         constraints: [node.role == manager]
-    labels:
-      - "traefik.basic.frontend.rule=Host:portainer.cinosure.com"
-      - "traefik.basic.port=9900"
-      - "traefik.basic.protocol=http"
+      labels:
+        - "traefik.basic.frontend.rule=Host:portainer.cinosure.com"
+        - "traefik.basic.port=9000"
+        - "traefik.basic.protocol=http"
    
 networks:
   agent_network:
