--- a/compose/wordpress.yml
+++ b/compose/wordpress.yml
@@ -1,38 +1,42 @@
-version: '3.3'
+version: '3.6'
 
 services:
   db:
     image: mysql:5.7
     volumes:
-      - db_data:/var/lib/mysql
+      - db-data:/var/lib/mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: oxoo4Eeziecasae9cheewax7
+      MYSQL_ROOT_PASSWORD: mypassword
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
-      MYSQL_PASSWORD: iePhai3eeg3Oophu6hi5zo0U
+      MYSQL_PASSWORD: wordpress
     networks:
       - wordpress-net
 
-  wordpress:
-    depends_on:
-      - db
-    image: wordpress:latest
-    restart: always
-    environment:
-      WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: iePhai3eeg3Oophu6hi5zo0U
-      WORDPRESS_DB_NAME: wordpress
-    deploy:
-      replicas: 1
-      labels:
-        - "traefik.frontend.rule=Host:wordpress.cinosure.com"
-        - "traefik.enable=true"
-        - "traefik.port=80"
-    networks:
-      - wordpress-net
+    app:
+      image: wordpress:latest
+      depends_on:
+        - db
+      ports:
+        - 8000:80
+      restart: always
+      environment:
+        WORDPRESS_DB_HOST: db:3306
+        WORDPRESS_DB_USER: wordpress
+        WORDPRESS_DB_PASSWORD: wordpress
+      networks:
+        - wordpress-net
+      volumes:
+        - app-data:/var/www/html
+      deploy:
+        labels:
+          - "traefik.docker.network=traefik-web"
+          - "traefik.frontend.rule=Host:wordpress.cinosure.com"
+          - "traefik.port=80"
+
 volumes:
-  db_data:
+  db-data:
+  app-data:
 networks:
   wordpress-net:
