adding shared directory

--- a/compose/nfs-server.yml
+++ b/compose/nfs-server.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   nfs-server-alpine:
     image: itsthenetwork/nfs-server-alpine:latest
+    environment:
+      - SHARED_DIRECTORY=/export
     deploy:
       replicas: 1
       restart_policy:
